--- a/package.json
+++ b/package.json
@@ -1,22 +1,45 @@
 {
-  "name": "react-Crossfade",
-  "version": "0.0.1",
+  "name": "react-crossfade",
+  "version": "0.1.0",
   "description": "React component separates enter & leave transitions, based on CSSTransitionGroup",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "babel source --presets es2015,react --out-dir lib"
+    "build": "babel index.jsx --out-dir dist",
+    "example": "npm run build && webpack example/index.js example/bundle.js --module-bind 'js=babel' --watch"
   },
-  "author": "Mikhail Anikanov",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/m-anikanov/react-crossfade.git"
+  },
   "license": "MIT",
   "peerDependencies": {
     "react": "^15.1.0",
     "react-addons-css-transition-group": "^15.3.0"
   },
+  "keywords": [
+    "react",
+    "react-component",
+    "component",
+    "animation",
+    "crossfade"
+  ],
+  "author": {
+    "name": "Mike Anikanov",
+    "email": "misha.anikanov@gmail.com",
+    "url": "http://mvanikanov.ru"
+  },
+  "bugs": {
+    "url": "https://github.com/m-anikanov/react-crossfade/issues"
+  },
   "devDependencies": {
+    "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.3.0",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0"
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.5.0",
+    "react-dom": "^15.1.0",
+    "webpack": "^1.13.2"
   }
 }
